--- a/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/layouts/header.phtml
@@ -166,17 +166,17 @@ $this->headTitle()->setSeparator(' - ');
         <div class="header">
             <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png" ></a></div>
             
-            <font size="7" color="red" style="float: left; font-family: cursive; margin: 50px 0px 0px 50px;"> A maneira inovadora de divulgar seus produtos  </font>
+            <font size="5" color="red" style="float: left; font-family: cursive; margin: 50px 0px 0px 30px;"> A maneira inovadora de divulgar seus produtos  </font>
+                      
+            <big><a style="float: right; margin: 100px 10px 0 0;" href="/estabelecimento/auth/logout">Sair</a></big>
                        
-            <big><a style="float: right; margin: 100px 20px 0 0;" href="/estabelecimento/auth/logout">Sair</a></big>
-                       
-            <big><a style="float: right; margin: 100px 20px 0 0;" href="/estabelecimento/index/faleconosco">Dúvidas? Fale conosco!</a></big>
+            <big><a style="float: right; margin: 100px 10px 0 0;" href="/estabelecimento/index/faleConosco"> Contato </a></big>
             
-            <big><a style="float: right; margin: 100px 20px 0 0;" href="/estabelecimento/index/quemsomos">Quem somos</a></big>
+            <big><a style="float: right; margin: 100px 10px 0 0;" href="/estabelecimento/index/quemSomos">Quem somos</a></big>
                                    
         </div>
 
-        <h6><font color="red"><?php echo $this->headline; ?></font></h6>
+        <h5><font color="red"><?php echo $this->headline; ?></font></h5>
         <?php echo $this->layout()->content; ?>
     </body>
 </html>
