--- a/whattoeat/application/modules/portal/views/scripts/index/iindexbackup.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/iindexbackup.phtml
@@ -1,60 +1,16 @@
-<div id="borderTopo"></div>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" type="image/ico" href="http://www.buscacomabem.com.br/img/favicon.ico"/>
-	<!-- Bootstrap core CSS 
-	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />-->
+
+	<!-- Bootstrap core CSS -->
+	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 	
-	<!-- Bootstrap theme 
-	<link type="text/css" href="/bootstrap/bootstrap-theme.min.css" rel="stylesheet">-->
+	<!-- Bootstrap theme -->
+	<link type="text/css" href="/bootstrap/bootstrap-theme.min.css" rel="stylesheet">
 	
-	<!-- Portal CSS
-	<link type="text/css" href="/css/portal.css" rel="stylesheet" /> -->    
-	<link type="text/css" href="/css/style.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script type="text/javascript">
-	$(document).ready(function(){
-		$('#pesquisaInicio').focus();
-		$('#filtroResult').click(function(){
-          $('#filtroMenu').animate({
-            height: 'toggle'
-        }) //Mostra MEnu Filtro   
+	<!-- Portal CSS-->
+	<link type="text/css" href="/css/portal.css" rel="stylesheet" />     
 
-          $('#confirmaFiltro').click(function(){ $('#filtroMenu').fadeOut() });
-
-      });
-		$('#botaoAddCarrinho').click(function(){$('#RemoveAdd').fadeIn()})
-
-
-	})// fim document
-
-	</script>
-	<style type="text/css">
-		#botaoEstabelecimento{position: absolute;top: 5px;right: 50px}
-		#botaoEstabelecimento:hover{cursor: pointer;opacity: 0.8}
-		#confirmaFiltro{background: #00CC66;border: none;padding: 5px;color: #FFFFFF;float: right;border-radius: 3px;}
-		body{background: url('http://www.buscacomabem.com.br/img/backcomabem.jpg') no-repeat;}
-		#filtroMenu{display:none;font-family:arial !important;background: #FFFFFF;padding: 10px;border-radius: 3px;border:#CCCCCC;font-size: 19px;
-			position:absolute;top: 215px;margin-left: 490px;color: #666666;height: auto;}
-		#EnglobaPesquisaInicio{position:relative;margin-top:160px;background: rgba(255,255,255,0.7);width: 680px;padding: 25px;
-			box-shadow: 0px 2px 2px 0px #000000 }
-			#pesquisaInicio{padding:20px;width: 550px;background:#FFFFFF;border: none;}
-			::-webkit-input-placeholder {color: #666666;font-size: 16px;vertical-align: middle;}
-
-			:-moz-placeholder { /* Firefox 18- */color: #666666;  font-size: 16px;vertical-align: middle;}
-
-			::-moz-placeholder {  /* Firefox 19+ */  color: #666666;font-size: 16px;vertical-align: middle;}
-
-			:-ms-input-placeholder {  color: #666666; font-size:16px;vertical-align: middle;}
-		#botaoPesquisar:hover{cursor: pointer;opacity: 0.8}
-		#botaoPesquisar{font-family:arial;background: #FF0033;padding: 17px;color: #FFFFFF;border: none;font-weight: bold;
-			font-size: 18px}
-			#borderTopo{width: 100%;height: 5px;background: #FFBF00;position: absolute;top: 0px;left: 0px;}
-			#logoComabem img{float:left;clear: both;width: 214px;height: 85px}
-			#filtroResult:hover{cursor: pointer;opacity: 0.8}
-			#filtroResult{position:absolute;margin-top:-68px;margin-left:550px;background: rgba(0,0,0,0.7);padding: 10px;border: none;color: #FFFFFF;font-weight: bold;font-size: 20px}
-			#filtroMenu input{margin-left: 0px}
-	</style>
+	
 	<!-- jQuery -->
     <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
     <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
@@ -64,9 +20,9 @@
 
 </head>
 
-        <div>
-            <div id="logoComabem" ><a href="/portal/"><img src="http://www.buscacomabem.com.br/img/logotipo.png"></a></div>
-              <a href="/estabelecimento/auth" ><div id="botaoEstabelecimento"><img src="http://www.buscacomabem.com.br/img/estabelecimento.png"></div></a>
+        <div class="header">
+            <div class="logo" style="float:left;"><a href="/portal/"><img src="/img/logotipo.png"></a></div>
+                <div style="float: right; margin-right: 50px; margin-top: 100px; font-size: medium;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
 	</div>
     <?php
 
@@ -81,10 +37,10 @@
     <div class="formBuscar">
         <form action="/portal/index/consulta" method="post" class="" id='form1'>
 
-              <!-- <h2>Por favor, entre com os critérios de pesquisa. Você pode procurar por ingredientes específicos, lugares, pratos ou 
+            <h2>Por favor, entre com os critérios de pesquisa. Você pode procurar por ingredientes específicos, lugares, pratos ou 
             qualquer outro critério disponível para trazer a opção mais certa para você!</h2> 
 
-          <div style="text-align: left; border: transparent; width: 380px; ">
+            <!-- <div style="text-align: left; border: transparent; width: 380px; ">
                  <p class="lead">Aqui você pode digitar qualquer termo para sua consulta:</p>
                 
 		Ex:  macarrão, massa verde, "Macarronada da Tia Dalva"
@@ -93,13 +49,7 @@
             </div> -->
 
             <br>
-            
-            <div id="EnglobaPesquisaInicio">
-            	<input type="button" id="filtroResult" value="Filtrar Por &#8628;">
-	            <input class="form-control" type="textarea" name="criterio" id="pesquisaInicio"  
-	            value="" placeholder="Ingredientes específicos, lugares, pratos..." required="required"><input class="btn btn-primary" id="botaoPesquisar" type="submit" 
-	            value="BUSCAR">
-        	</div>
+            <input class="form-control" type="textarea" name="criterio" style="width: 400px;" value="<?php echo $this->pesquisa_facapedido_criterio; ?>">
             <br>
             <br>
              <p class="lead">Culinária:</p>
@@ -122,7 +72,7 @@
 
 		<?php } ?>
 	    </div>
-	    <div style="width:450;" id="filtroMenu">
+
              <font class="lead">Valor calórico até: </font><input  type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
             <br>
             <br>
@@ -130,25 +80,24 @@
             <p class="lead">Listar apenas estabelecimentos que oferecem: </p>
             
             
-	              
-			<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glútem<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose<br>
-				<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico<br>
-				<input type="button" id="confirmaFiltro" value="&#10004; Ok">	
-            </div>
+              <div style="width:450; height: 100;">
+		<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glútem
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose
+		<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico	
+              </div>
 
 	    <br><br><br>
-            
+            <input class="btn btn-primary" type="submit" value="Pesquisar">
 
         </form>
     </div>
 
-<!--<h3>Nosso sistema ainda não faz pedidos mas você pode simular suas compras e verificar o custo total. Compre em quantos estabelecimentos quiser. 
-    Todos os itens escolhidos ficarão no seu carrinho.</h3>-->
+<h3>Nosso sistema ainda não faz pedidos mas você pode simular suas compras e verificar o custo total. Compre em quantos estabelecimentos quiser. 
+    Todos os itens escolhidos ficarão no seu carrinho.</h3>
     
-    <div style="margin-right: 90px;display:none" id="RemoveAdd">
+    <div style="margin-right: 90px;">
         
 	      <form action="/portal/index/limpar-Carrinho" method="post" class="" >
                   <div style="float: right; position: relative; ">
@@ -169,7 +118,7 @@
 
     
      
-<div style="float: right;margin-right: 90px;position:fixed;bottom:0px">
+<div style="float: right;margin-right: 90px;">
 <h4> Seu pedido </h4>
         
 <table  id="tableListaPedido" style=" border-spacing: 10px; border-collapse: separate;" >  
@@ -182,7 +131,7 @@
 <p style="padding-left: 50px;"><?php $this->headline; ?></p>
 
 <?php
-	    
+
     if(!empty($this->pesquisa_facapedido_criterio))
     {
 	for ($i = 0; $i < sizeof($this->resultado); $i++)
@@ -190,12 +139,12 @@
 ?>
 
 <div style=' clear:both;  color:black;'>
-    <div style='background:#FFFFFF;width:450px;margin:auto;position:absolute;margin-top:-200px '>
+    <div style='float: left; margin: 20px 1px 20px 20px; '>
 	<p><img src='/portal/index/get-Imagem-Produto/id/<?php echo $this->resultado[$i]['cod_foto'] ?>' width='100' height='auto' alt=''>
 	</p>
-   
+    </div>
 	
-    <div>
+    <div style='float: left; margin: 30px 1px 10px 10px; width:400px; font-size: medium;'>
 	<p style='display: block' >
 	    <?php echo $this->resultado[$i]["nome"]; ?>
             <p style='font-size: small;'> 
@@ -204,7 +153,7 @@
     </p> </div> <!-- nome do produto -->
 
         <!--	    //imprime os tamanhos disponiveis e precos do produto -->
-        <div>
+        <div style='float: left; margin: 35px 1px 10px 10px; font-size: medium; text-align: left'>
 	<?php
 
 
@@ -226,7 +175,7 @@
 	    //imprime o botao que vai permitir incluir no carrinho
 	    if($this->resultado[$i]['isAberto'] == true)
 	    {
-                echo "<img id='botaoAddCarrinho' src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(".$this->resultado[$i]['cod_empresa'].",".$this->resultado[$i]['cod_tamanho_produto'].",'".$this->resultado[$i]['razao_social']."','".$this->resultado[$i]['nome']."','".$this->resultado[$i]['tamanho']."',".$preco.")\"> ";
+                echo "<img src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(".$this->resultado[$i]['cod_empresa'].",".$this->resultado[$i]['cod_tamanho_produto'].",'".$this->resultado[$i]['razao_social']."','".$this->resultado[$i]['nome']."','".$this->resultado[$i]['tamanho']."',".$preco.")\"> ";
                 echo "<input type='text' style='visibility: hidden;' size='2' maxlength='2' value='1' id='quantidade_".$this->resultado[$i]['cod_empresa']."_".$this->resultado[$i]['cod_tamanho_produto']."'>";
 	    }
 	
@@ -270,7 +219,7 @@
     
         </div> <!-- precos -->
 
-<?php	            echo "<div>  \n";
+<?php	            echo "<div style='float: left; margin: 30px 1px 10px 10px; width:150px; '>  \n";
 		    echo  "<div style='font-weight: bold;'>" . $this->resultado[$i]["razao_social"] . " </div> <br> \n";
 
 		    //verifica se a empresa esta atendendo nesse horario
@@ -294,8 +243,7 @@
 	}
 ?>
         
-      </div> <!--fim resultado pesquisa-->   
-   
+        
    </div>
 
 
