--- a/whattoeat/application/modules/portal/views/scripts/index/index3.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index3.phtml
@@ -1,7 +1,7 @@
 <div id="borderTopo"></div>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" type="image/ico" href="http://www.buscacomabem.com.br/img/favicon.ico"/>
+
 	<!-- Bootstrap core CSS 
 	<link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />-->
 	
@@ -11,31 +11,9 @@
 	<!-- Portal CSS
 	<link type="text/css" href="/css/portal.css" rel="stylesheet" /> -->    
 	<link type="text/css" href="/css/style.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-	<script type="text/javascript">
-	$(document).ready(function(){
-		$('#pesquisaInicio').focus();
-		$('#filtroResult').click(function(){
-          $('#filtroMenu').animate({
-            height: 'toggle'
-        }) //Mostra MEnu Filtro   
-
-          $('#confirmaFiltro').click(function(){ $('#filtroMenu').fadeOut() });
-
-      });
-		$('#botaoAddCarrinho').click(function(){$('#RemoveAdd').fadeIn()})
-
-
-	})// fim document
-
-	</script>
 	<style type="text/css">
-		#botaoEstabelecimento{position: absolute;top: 5px;right: 50px}
-		#botaoEstabelecimento:hover{cursor: pointer;opacity: 0.8}
-		#confirmaFiltro{background: #00CC66;border: none;padding: 5px;color: #FFFFFF;float: right;border-radius: 3px;}
-		body{background: url('http://www.buscacomabem.com.br/img/backcomabem.jpg') no-repeat;}
-		#filtroMenu{display:none;font-family:arial !important;background: #FFFFFF;padding: 10px;border-radius: 3px;border:#CCCCCC;font-size: 19px;
-			position:absolute;top: 215px;margin-left: 490px;color: #666666;height: auto;}
+		body{background: url('css/images/backcomabem.jpg') no-repeat;}
+		
 		#EnglobaPesquisaInicio{position:relative;margin-top:160px;background: rgba(255,255,255,0.7);width: 680px;padding: 25px;
 			box-shadow: 0px 2px 2px 0px #000000 }
 			#pesquisaInicio{padding:20px;width: 550px;background:#FFFFFF;border: none;}
@@ -51,9 +29,7 @@
 			font-size: 18px}
 			#borderTopo{width: 100%;height: 5px;background: #FFBF00;position: absolute;top: 0px;left: 0px;}
 			#logoComabem img{float:left;clear: both;width: 214px;height: 85px}
-			#filtroResult:hover{cursor: pointer;opacity: 0.8}
 			#filtroResult{position:absolute;margin-top:-68px;margin-left:550px;background: rgba(0,0,0,0.7);padding: 10px;border: none;color: #FFFFFF;font-weight: bold;font-size: 20px}
-			#filtroMenu input{margin-left: 0px}
 	</style>
 	<!-- jQuery -->
     <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
@@ -66,7 +42,7 @@
 
         <div>
             <div id="logoComabem" ><a href="/portal/"><img src="http://www.buscacomabem.com.br/img/logotipo.png"></a></div>
-              <a href="/estabelecimento/auth" ><div id="botaoEstabelecimento"><img src="http://www.buscacomabem.com.br/img/estabelecimento.png"></div></a>
+                <div style="float: right; margin-right: 50px; margin-top: 100px; font-size: medium;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
 	</div>
     <?php
 
@@ -97,7 +73,7 @@
             <div id="EnglobaPesquisaInicio">
             	<input type="button" id="filtroResult" value="Filtrar Por &#8628;">
 	            <input class="form-control" type="textarea" name="criterio" id="pesquisaInicio"  
-	            value="" placeholder="Ingredientes específicos, lugares, pratos..." required="required"><input class="btn btn-primary" id="botaoPesquisar" type="submit" 
+	            value="" placeholder="Ingredientes específicos, lugares, pratos..."><input class="btn btn-primary" id="botaoPesquisar" type="submit" 
 	            value="BUSCAR">
         	</div>
             <br>
@@ -122,7 +98,7 @@
 
 		<?php } ?>
 	    </div>
-	    <div style="width:450;" id="filtroMenu">
+
              <font class="lead">Valor calórico até: </font><input  type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
             <br>
             <br>
@@ -130,14 +106,13 @@
             <p class="lead">Listar apenas estabelecimentos que oferecem: </p>
             
             
-	              
-			<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glútem<br>
-                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose<br>
-				<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico<br>
-				<input type="button" id="confirmaFiltro" value="&#10004; Ok">	
-            </div>
+              <div style="width:450; height: 100;">
+		<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glútem
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose
+		<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico	
+              </div>
 
 	    <br><br><br>
             
@@ -145,10 +120,10 @@
         </form>
     </div>
 
-<!--<h3>Nosso sistema ainda não faz pedidos mas você pode simular suas compras e verificar o custo total. Compre em quantos estabelecimentos quiser. 
-    Todos os itens escolhidos ficarão no seu carrinho.</h3>-->
+<h3>Nosso sistema ainda não faz pedidos mas você pode simular suas compras e verificar o custo total. Compre em quantos estabelecimentos quiser. 
+    Todos os itens escolhidos ficarão no seu carrinho.</h3>
     
-    <div style="margin-right: 90px;display:none" id="RemoveAdd">
+    <div style="margin-right: 90px;">
         
 	      <form action="/portal/index/limpar-Carrinho" method="post" class="" >
                   <div style="float: right; position: relative; ">
@@ -182,7 +157,7 @@
 <p style="padding-left: 50px;"><?php $this->headline; ?></p>
 
 <?php
-	    
+
     if(!empty($this->pesquisa_facapedido_criterio))
     {
 	for ($i = 0; $i < sizeof($this->resultado); $i++)
@@ -190,12 +165,12 @@
 ?>
 
 <div style=' clear:both;  color:black;'>
-    <div style='background:#FFFFFF;width:450px;margin:auto;position:absolute;margin-top:-200px '>
+    <div style='float: left; margin: 20px 1px 20px 20px; '>
 	<p><img src='/portal/index/get-Imagem-Produto/id/<?php echo $this->resultado[$i]['cod_foto'] ?>' width='100' height='auto' alt=''>
 	</p>
-   
+    </div>
 	
-    <div>
+    <div style='float: left; margin: 30px 1px 10px 10px; width:400px; font-size: medium;'>
 	<p style='display: block' >
 	    <?php echo $this->resultado[$i]["nome"]; ?>
             <p style='font-size: small;'> 
@@ -204,7 +179,7 @@
     </p> </div> <!-- nome do produto -->
 
         <!--	    //imprime os tamanhos disponiveis e precos do produto -->
-        <div>
+        <div style='float: left; margin: 35px 1px 10px 10px; font-size: medium; text-align: left'>
 	<?php
 
 
@@ -226,7 +201,7 @@
 	    //imprime o botao que vai permitir incluir no carrinho
 	    if($this->resultado[$i]['isAberto'] == true)
 	    {
-                echo "<img id='botaoAddCarrinho' src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(".$this->resultado[$i]['cod_empresa'].",".$this->resultado[$i]['cod_tamanho_produto'].",'".$this->resultado[$i]['razao_social']."','".$this->resultado[$i]['nome']."','".$this->resultado[$i]['tamanho']."',".$preco.")\"> ";
+                echo "<img src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(".$this->resultado[$i]['cod_empresa'].",".$this->resultado[$i]['cod_tamanho_produto'].",'".$this->resultado[$i]['razao_social']."','".$this->resultado[$i]['nome']."','".$this->resultado[$i]['tamanho']."',".$preco.")\"> ";
                 echo "<input type='text' style='visibility: hidden;' size='2' maxlength='2' value='1' id='quantidade_".$this->resultado[$i]['cod_empresa']."_".$this->resultado[$i]['cod_tamanho_produto']."'>";
 	    }
 	
@@ -270,7 +245,7 @@
     
         </div> <!-- precos -->
 
-<?php	            echo "<div>  \n";
+<?php	            echo "<div style='float: left; margin: 30px 1px 10px 10px; width:150px; '>  \n";
 		    echo  "<div style='font-weight: bold;'>" . $this->resultado[$i]["razao_social"] . " </div> <br> \n";
 
 		    //verifica se a empresa esta atendendo nesse horario
@@ -294,8 +269,7 @@
 	}
 ?>
         
-      </div> <!--fim resultado pesquisa-->   
-   
+        
    </div>
 
 
