--- a/whattoeat/public/css/portalBackup.css
+++ b/whattoeat/public/css/portalBackup.css
@@ -34,9 +34,7 @@ body {
 
 .header {
 	height: 137px;
-	background: url('http://www.buscacomabem.com.br/img/backcomabem.jpg') no-repeat;
-	background-attachment: fixed;
-	background-position: center; 
+	background: #FFBF00;
 	margin: 0 0 20px 0;
 	padding: 0;
 	box-shadow: 3px 3px 0 #333;
